docs: update thesis content and bibliography

--- a/docs/FrontMatter/Abstract.tex
+++ b/docs/FrontMatter/Abstract.tex
@@ -1,7 +1,8 @@
+% Abstract.tex
 \begin{resumen}
-	Resumen en español
-\end{resumen}
-
-\begin{abstract}
-	Resumen en inglés
-\end{abstract}
+	El presente trabajo se centra en el desarrollo de un modelo computacional para simular la movilidad humana y su impacto en la dinámica de enfermedades transmitidas por vectores. La movilidad humana, caracterizada por los desplazamientos de individuos entre diferentes ubicaciones geográficas, juega un papel crucial en la propagación de estas enfermedades.  El modelo propuesto incorpora diversos factores que influyen en la movilidad, como patrones de desplazamiento diarios, viajes de larga distancia y migraciones, para comprender cómo estos movimientos afectan la distribución espacial y temporal de las enfermedades.  Se espera que este modelo contribuya al diseño de estrategias de control más efectivas para mitigar el impacto de estas enfermedades en la salud pública.
+	\end{resumen}
+	
+	\begin{abstract}
+	This thesis focuses on the development of a computational model to simulate human mobility and its impact on the dynamics of vector-borne diseases. Human mobility, characterized by the movement of individuals between different geographical locations, plays a crucial role in the spread of these diseases. The proposed model incorporates various factors influencing mobility, such as daily commuting patterns, long-distance travel, and migration, to understand how these movements affect the spatial and temporal distribution of diseases. This model is expected to contribute to design of more effective control strategies to mitigate the impact of these diseases on public health.
+	\end{abstract}
