--- a/docs/Thesis.tex
+++ b/docs/Thesis.tex
@@ -49,12 +49,12 @@
 
 \lstset{style=mystyle}
 
-\title{Título de la tesis}
-\author{\\\vspace{0.25cm}Nombre del autor}
-\advisor{\\\vspace{0.25cm}Nombre del primer tutor\\\vspace{0.2cm}Nombre del segundo tutor}
-\degree{Licenciado en (Matemática o Ciencia de la Computación)}
+\title{Simulación computacional de la movilidad humana para la dinámica de enfermedades transmitidas por vectores}
+\author{\\\vspace{0.25cm}Yoan René Ramos Corrales}
+\advisor{\\\vspace{0.25cm}Dra. Aymée de los Ángeles Marrero Severo\\\vspace{0.2cm}Lic. Ernesto Alfonso Hernández}
+\degree{Licenciado en Ciencia de la Computación}
 \faculty{Facultad de Matemática y Computación}
-\date{Fecha\\\vspace{0.25cm}\href{https://github.com/username/repo}{github.com/username/repo}}
+\date{Enero 2025\\\vspace{0.25cm}\href{https://github.com/YoanRene/My-Thesis}{github.com/YoanRene/My-Thesis}}
 \logo{Graphics/uhlogo}
 \makenomenclature
 
