feat: update thesis title and enhance introduction and background sections

--- a/docs/Bibliography.bib
+++ b/docs/Bibliography.bib
@@ -18,6 +18,310 @@
   publisher={Nature Publishing Group}
 }
 
+@article{martin2023trackintel,
+  title={Trackintel: An open-source python library for human mobility analysis},
+  author={Martin, Henry and Hong, Ye and Wiedemann, Nina and Bucher, Dominik and Raubal, Martin},
+  journal={Computers, Environment and Urban Systems},
+  volume={101},
+  pages={101938},
+  year={2023},
+  publisher={Elsevier},
+  doi={10.1016/j.compenvurbsys.2023.101938}
+}
+
+@article{radford2018improving,
+  title={Improving Language Understanding by Generative Pre-Training},
+  author={Radford, Alec and Narasimhan, Karthik and Salimans, Tim and Sutskever, Ilya},
+  year={2018}
+}
+
+@thesis{Hernandez2023,
+  author = {Hernández, Ernesto Alfonso},
+  title = {Simulación computacional para la dinámica de enfermedades transmitidas por vectores},
+  school = {Facultad Matemática y Computación, Universidad de La Habana}, 
+  year = {2023},
+  type = {Tesis de Diploma}, 
+  pages = {56},
+  language = {spa},
+  advisor = {Marrero Severo, Aymée de los Ángeles},
+  keywords = {simulación computacional, enfermedades transmitidas por vectores, dinámica de enfermedades}, 
+}
+
+@inproceedings{hariharan2004project,
+  title={Project Lachesis: Parsing and Modeling Location Histories},
+  author={Hariharan, Ram and Toyama, Kentaro},
+  booktitle={Geographic Information Science},
+  pages={106--124},
+  year={2004},
+  publisher={Springer Berlin Heidelberg},
+  doi={10.1007/978-3-540-30231-5_8}
+}
+
+@inproceedings{li2008mining,
+  title={Mining user similarity based on location history},
+  author={Li, Quannan and Zheng, Yu and Xie, Xing and Chen, Yinan and Liu, Wenyu and Ma, Wei-Ying},
+  booktitle={Proceedings of the 16th ACM SIGSPATIAL international conference on Advances in geographic information systems},
+  pages={1--10},
+  year={2008},
+  organization={ACM},
+  series = {GIS '08},
+  address = {New York, NY, USA},
+  doi={10.1145/1463434.1463477}
+}
+
+@article{solomon2021analyzing,
+  title={Analyzing movement predictability using human attributes and behavioral patterns},
+  author={Solomon, Adir and Livne, Amit and Katz, Gilad and Shapira, Bracha and Rokach, Lior},
+  journal={Computers, Environment and Urban Systems},
+  volume={87},
+  pages={101596},
+  year={2021}
+}
+
+@book{schonfelder2016urban,
+  title={Urban rhythms and travel behaviour: spatial and temporal phenomena of daily travel},
+  author={Sch{\"o}nfelder, Stefan and Axhausen, Kay W},
+  year={2016},
+  publisher={Routledge}
+}
+
+@article{susilo2014repetitions,
+  title={Repetitions in individual daily activity--travel--location patterns: a study using the Herfindahl--Hirschman Index},
+  author={Susilo, Yusak O and Axhausen, Kay W},
+  journal={Transportation},
+  volume={41},
+  number={5},
+  pages={995--1011},
+  year={2014},
+  publisher={Springer}
+}
+
+@article{zheng2018survey,
+  title={A Survey of Location Prediction on Twitter},
+  author={Zheng, Xiaofang and Han, Jialie and Sun, Aixin},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  volume={30},
+  number={9},
+  pages={1652--1671},
+  year={2018},
+  publisher={IEEE},
+  doi={10.1109/TKDE.2018.2807840}
+}
+
+@article{lau2019survey,
+  title={A survey of data fusion in smart city applications},
+  author={Lau, Benjamin PL and Marakkalage, Sachith H and Zhou, Yanhua and Hassan, Noor U and Yuen, Chau and Zhang, Meng and Tan, U-Xuan},
+  journal={Information Fusion},
+  volume={52},
+  pages={357--374},
+  year={2019},
+  publisher={Elsevier},
+  doi={10.1016/j.inffus.2019.05.004}
+}
+
+@article{tedjopurnomo2020survey,
+  title={A Survey on Modern Deep Neural Network for Traffic Prediction: Trends, Methods and Challenges},
+  author={Tedjopurnomo, Dimas A and Bao, Zhenhua and Zheng, Baihua and Choudhury, Farhana and Qin, Ammar},
+  journal={IEEE Transactions on Knowledge and Data Engineering},
+  volume={34},
+  number={4},
+  pages={1544--1561},
+  year={2020},
+  publisher={IEEE},
+  doi={10.1109/TKDE.2020.3001195}
+}
+
+@article{laha2018real,
+  title={Real time location prediction with taxi-GPS data streams},
+  author={Laha, AK and Putatunda, S},
+  journal={Transportation Research Part C: Emerging Technologies},
+  volume={92},
+  pages={298--322},
+  year={2018},
+  publisher={Elsevier},
+  doi={10.1016/j.trc.2018.05.005}
+}
+
+@article{neutens2007space,
+  title={Space--time opportunities for multiple agents: a constraint-based approach},
+  author={Neutens, T and Witlox, F and Van De Weghe, N and De Maeyer, P H},
+  journal={International Journal of Geographical Information Science},
+  volume={21},
+  number = {10}, % Added number, based on cross-referencing
+  pages={1061--1076},
+  year={2007},
+  publisher={Taylor \& Francis}
+}
+
+
+@article{yoon2012feasibility,
+  title={Feasibility of using time--space prism to represent available opportunities and choice sets for destination choice models in the context of dynamic urban environments},
+  author={Yoon, Seo Youn and Deutsch, Kathleen and Chen, Yali and Goulias, Konstadinos G},
+  journal={Transportation},
+  volume={39},
+  number={4},
+  pages={807--823},
+  year={2012},
+  publisher={Springer}
+}
+
+@article{scott2012modeling,
+  title={Modeling constrained destination choice for shopping: a GIS-based, time-geographic approach},
+  author={Scott, Darren M and He, Sylvia Y},
+  journal={Journal of Transport Geography},
+  volume={23},
+  pages={60--71},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{mariante2018modeling,
+  title={Modeling discretionary activity location choice using detour factors and sampling of alternatives for mixed logit models},
+  author={Mariante, Gabriel Leite and Ma, Tai-Yu and Van Acker, V{\'e}ronique},
+  journal={Journal of Transport Geography},
+  volume={72},
+  pages={151--165},
+  year={2018},
+  publisher={Elsevier}
+}
+
+@misc{hong2022conserved,
+  title = {Conserved quantities in human mobility. From locations to trips},
+  author = {Hong, Ye and Martin, Henry and Xin, Yanan and Bucher, Dominik and Reck, Daniel J and Axhausen, Kay W and Raubal, Martin},
+  year = {2022},
+  doi = {10.3929/ethz-b-000551831},
+  url = {https://doi.org/10.3929/ethz-b-000551831}
+}
+
+@article{dharmowijoyo2017analysing,
+  title={Analysing the complexity of day-to-day individual activity-travel patterns using a multidimensional sequence alignment model: A case study in the Bandung Metropolitan Area, Indonesia},
+  author={Dharmowijoyo, Dimas BE and Susilo, Yusak O and Karlstr{\"o}m, Anders},
+  journal={Journal of Transport Geography},
+  volume={64},
+  pages={1--12},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@inproceedings{vaswani2017attention,
+  title={Attention is All you Need},
+  author={Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N and Kaiser, Lukasz and Polosukhin, Illia},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={5998--6008},
+  year={2017}
+}
+
+@inproceedings{feng2018deepmove,
+  title={DeepMove: Predicting Human Mobility with Attentional Recurrent Networks},
+  author={Feng, Jie and Li, Yong and Zhang, Chao and Sun, Funing and Meng, Fanchao and Guo, Ang and Jin, Depeng},
+  booktitle={International World Wide Web Conference (WWW)},
+  pages={1459--1468},
+  year={2018}
+}
+
+@inproceedings{liu2016predicting,
+  title={Predicting the Next Location: A Recurrent Model with Spatial and Temporal Contexts},
+  author={Liu, Qiang and Wu, Shu and Wang, Liang and Tan, Tieniu},
+  booktitle={AAAI Conference on Artificial Intelligence (AAAI)},
+  pages={194--200},
+  year={2016}
+}
+
+@article{li2020hierarchical,
+  title={A hierarchical temporal attention-based LSTM encoder-decoder model for individual mobility prediction},
+  author={Li, Fa and Gui, Zhipeng and Zhang, Zhaoyu and Peng, Dehua and Tian, Siyu and Yuan, Kunxiaojia and Sun, Yunzeng and Wu, Huayi and Gong, Jianya and Lei, Yichen},
+  journal={Neurocomputing},
+  volume={403},
+  pages={153--166},
+  year={2020}
+}
+
+@article{huang2017mining,
+  title={Mining online footprints to predict user’s next location},
+  author={Huang, Qunying},
+  journal={International Journal of Geographical Information Science},
+  volume={31},
+  number={3},
+  pages={523--541},
+  year={2017}
+}
+
+@inproceedings{chen2014nlpm,
+  title = {NLPMM: A Next Location Predictor with Markov Modeling},
+  author = {Chen, Meng and Liu, Yang and Yu, Xiaohui},
+  booktitle = {Pacific-Asia Conference on Knowledge Discovery and Data Mining (PAKDD)},
+  pages = {186--197},
+  year = {2014}
+}
+
+@inproceedings{gambs2012next,
+  title={Next Place Prediction Using Mobility Markov Chains},
+  author={Gambs, S{\'e}bastien and Killijian, Marc-Olivier and del Prado Cortez, Miguel N{\'u}{\~n}ez},
+  booktitle={Proceedings of the First Workshop on Measurement, Privacy, and Mobility},
+  series={MPM '12},
+  pages={3:1--3:6},
+  year={2012}
+}
+
+@inproceedings{ashbrook2002learning,
+  title={Learning Significant Locations and Predicting User Movement with GPS},
+  author={Ashbrook, Daniel and Starner, Thad},
+  booktitle={International Symposium on Wearable Computers (ISWC)},
+  pages={101--108},
+  year={2002}
+}
+
+@article{luca2021survey,
+  title={A Survey on Deep Learning for Human Mobility},
+  author={Luca, Massimiliano and Barlacchi, Gianni and Lepri, Bruno and Pappalardo, Luca},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={55},
+  number={1},
+  pages={7:1--7:44},
+  year={2021}
+}
+
+@inproceedings{wang2021reinforced,
+  title={Reinforced Imitative Graph Representation Learning for Mobile User Profiling: An Adversarial Training Perspective},
+  author={Wang, Dongjie and Wang, Pengyang and Liu, Kunpeng and Zhou, Yuanchun and Hughes, Charles E. and Fu, Yanjie},
+  booktitle={AAAI Conference on Artificial Intelligence (AAAI)},
+  pages={4410--4417},
+  year={2021}
+}
+
+@article{wang2022online,
+  title={Online POI Recommendation: Learning Dynamic Geo-Human Interactions in Streams},
+  author={Wang, Dongjie and Liu, Kunpeng and Xiong, Hui and Fu, Yanjie},
+  journal={arXiv preprint arXiv:2201.10983},
+  year={2022}
+}
+
+@article{xu2022understanding,
+  title={Understanding the movement predictability of international travelers using a nationwide mobile phone dataset collected in South Korea},
+  author={Xu, Yang and Zou, Dan and Park, Sangwon and Li, Qiuping and Zhou, Suhong and Li, Xinyu},
+  journal={Computers, Environment and Urban Systems},
+  volume={92},
+  pages={101753},
+  year={2022}
+}
+
+@article{pirozmand2014human,
+  title={Human mobility in opportunistic networks: Characteristics, models and prediction methods},
+  author={Pirozmand, Poria and Wu, Guowei and Jedari, Behrouz and Xia, Feng},
+  journal={Journal of Network and Computer Applications},
+  volume={42},
+  pages={45--58},
+  year={2014}
+}
+
+@inproceedings{xue2021mobtcast,
+  title={MobTCast: Leveraging Auxiliary Trajectory Forecasting for Human Mobility Prediction},
+  author={Xue, Hao and Salim, Flora D. and Ren, Yongli and Oliver, Nuria},
+  booktitle={Conference on Neural Information Processing Systems (NeurIPS)},
+  pages={30380--30391},
+  year={2021}
+}
+
 @article{kermack1927contribution,
   title={A contribution to the mathematical theory of epidemics},
   author={Kermack, William Ogilvy and McKendrick, Anderson Gray},
@@ -38,4 +342,51 @@
   pages={21484--21489},
   year={2009},
   publisher={National Acad Sciences}
+}
+
+@article{liao2018multi,
+  title={Multi-Context Integrated Deep Neural Network Model for Next Location Prediction},
+  author={Liao, Jing and Liu, Tao and Liu, Meng and Wang, Jiayi and Wang, Yue and Sun, Hao},
+  journal={IEEE Access},
+  volume={6},
+  pages={21980--21990},
+  year={2018},
+  publisher={IEEE},
+  doi={10.1109/ACCESS.2018.2827422}
+}
+
+@misc{wang2024inextlargelanguage,
+      title={Where Would I Go Next? Large Language Models as Human Mobility Predictors}, 
+      author={Xinglei Wang and Meng Fang and Zichao Zeng and Tao Cheng},
+      year={2024},
+      eprint={2308.15197},
+      archivePrefix={arXiv},
+      primaryClass={cs.AI},
+      url={https://arxiv.org/abs/2308.15197}, 
+}
+
+@article{Hong_2023,
+   title={Context-aware multi-head self-attentional neural network model for next location prediction},
+   volume={156},
+   ISSN={0968-090X},
+   url={http://dx.doi.org/10.1016/j.trc.2023.104315},
+   DOI={10.1016/j.trc.2023.104315},
+   journal={Transportation Research Part C: Emerging Technologies},
+   publisher={Elsevier BV},
+   author={Hong, Ye and Zhang, Yatao and Schindler, Konrad and Raubal, Martin},
+   year={2023},
+   month=nov, pages={104315} 
+}
+
+
+@article{sun2022tcsanet,
+  title={TCSA-Net: A Temporal-Context-Based Self-Attention Network for Next Location Prediction},
+  author={Sun, Guang and Qi, Hongfei and Shen, Yulin and Yin, Beibei},
+  journal={IEEE Transactions on Intelligent Transportation Systems},
+  volume={23},
+  number={11},
+  pages={20735--20745},
+  year={2022},
+  publisher={IEEE},
+  doi={10.1109/TITS.2022.3181339}
 }
