--- a/docs/MainMatter/Introduction.tex
+++ b/docs/MainMatter/Introduction.tex
@@ -2,7 +2,7 @@
 \chapter*{Introducción}\label{chapter:introduction}
 \addcontentsline{toc}{chapter}{Introducción}
 
-Las enferemedades transimitidas por vectores son una de 
+Las enfermedades transmitidas por vectores son una de 
 las grandes problemáticas de salud pública en el mundo.
 Según la Organización Mundial de la Salud (OMS),
 estas representan más del 17\% de las enfermedades infecciosas
